--- a/final_report/final-report.tex
+++ b/final_report/final-report.tex
@@ -857,6 +857,9 @@ Flask.
 The number of concurrent worker instances is limited by the ChatGPT API
 rate limit.
 
+\subsubsection{Alternative Methods
+Considered}\label{alternative-methods-considered-1}
+
 We explored other cloud deployment options, including Amazon EC2 and
 Google Cloud Functions. However, since our partner uses Microsoft Azure,
 we decided to stay within that ecosystem. In the future, their
