--- a/final_report/final-report.tex
+++ b/final_report/final-report.tex
@@ -812,9 +812,10 @@ considered.
 We used large language models (LLMs) to clean and standardize messy menu
 data. As discussed in the \hyperref[data-cleaning-module]{Data Cleaning
 Module}, the raw data was not available for direct use in our
-recommendation system. The LLM extracted core dish information (base,
-flavor, combo status, restaurant type) with high accuracy, even without
-full descriptions.
+recommendation system. The LLM efficiently extracted core dish
+information (including base, flavor, combo status, and restaurant type)
+even when descriptions were missing, enabling effective and streamlined
+data cleaning.
 
 \subsubsection{Limitation}\label{limitation}
 
