--- a/technical_report/technical_report.tex
+++ b/technical_report/technical_report.tex
@@ -235,7 +235,7 @@
   \apptocmd{\@title}{\par {\large #1 \par}}{}{}
 }
 \makeatother
-\subtitle{MDS Capstone Final Report}
+\subtitle{MDS Capstone Technical Report}
 \author{Hankun Xiao, Yasmin Hassan, Jessie Zhang, Zhiwei Zhang}
 \date{}
 
